Update ServiceException